--- a/R/2-muir-analysis.Rmd
+++ b/R/2-muir-analysis.Rmd
@@ -93,19 +93,24 @@ pca.cor.plot
 ```
 ## Biplot
 
-Combines scores and loadings.  To make a column-principal biplot, I think I need to standardize the scores on each axis to unit variance. (or SS = 1?? Or just scale loadings up by sqrt(n)??  Or maybe it just needs to look nice?)
+Combines scores and loadings. I actually found a lot of **very confusing** and conflicting information on how to scale scores and loadings to make a bi-plot, so for now I've just multiplied the loadings by a factor that makes the plot look nice.
 
 ```{r}
 scaled_loadings <- get_loadings(tom.pca) %>% 
-  mutate_if(is.numeric, ~.*sqrt(63))
-  
+  mutate_if(is.numeric, ~.*5)
+scaled_scores <- get_scores(tom.pca) 
+# prcomp(X, scale. = TRUE, rank. = 2) %>% biplot(scale = TRUE)
+# biplot.princomp() just plots the scores and loadings on different axes--not a true biplot?
+
 ggplot(scaled_loadings) +
+  geom_point(data = scaled_scores, aes(x = p1, y = p2, fill = tomato.filtered$precip),
+             shape = 21, size = 2, inherit.aes = FALSE) +
   geom_segment(aes(x = 0, y = 0, xend = p1, yend = p2),
+               alpha = 0.6,
                arrow = arrow(length = unit(0.15, "cm"))) +
   geom_label_repel(aes(x = p1, y = p2, label = Variable),
                    segment.alpha = 0.6, direction = "y", size = 2.7, 
                    min.segment.length = 5, force = 10) +
-  geom_point(data = get_scores(tom.pca), aes(x = p1, y = p2, fill = tomato.filtered$precip), shape = 21, size = 2, inherit.aes = FALSE) +
   scale_fill_viridis_c() +
   labs(x = glue("PC1 ({tom.pca.data$axis_stats[1,1] * 100}%)"),
        y = glue("PC2 ({tom.pca.data$axis_stats[2,1] * 100}%)"),
@@ -149,19 +154,24 @@ tom.pls <-
 ## PLSR bi-plot
 
 ```{r}
-scaled_loadings <- get_loadings(tom.pca) %>% 
-  mutate_if(is.numeric, ~.*sqrt(63))
+tom.pls.data <- get_modelinfo(tom.pls)
+scaled_loadings <- get_loadings(tom.pls) %>% 
+  mutate_if(is.numeric, ~.*5)
+
+scaled_scores <- get_scores(tom.pls)
   
 ggplot(scaled_loadings) +
+  geom_point(data = scaled_scores, aes(x = p1, y = p2, fill = tomato.filtered$precip),
+             shape = 21, size = 2, inherit.aes = FALSE) +
   geom_segment(aes(x = 0, y = 0, xend = p1, yend = p2),
+               alpha = 0.6,
                arrow = arrow(length = unit(0.15, "cm"))) +
   geom_label_repel(aes(x = p1, y = p2, label = Variable),
                    segment.alpha = 0.6, direction = "y", size = 2.7, 
                    min.segment.length = 5, force = 10) +
-  geom_point(data = get_scores(tom.pca), aes(x = p1, y = p2, fill = tomato.filtered$precip), shape = 21, size = 2, inherit.aes = FALSE) +
   scale_fill_viridis_c() +
-  labs(x = glue("PC1 ({tom.pca.data$axis_stats[1,1] * 100}%)"),
-       y = glue("PC2 ({tom.pca.data$axis_stats[2,1] * 100}%)"),
+  labs(x = glue("Predictive Component 1 ({tom.pls.data$axis_stats[1,1] * 100}%)"),
+       y = glue("Predictive Component 2 ({tom.pls.data$axis_stats[2,1] * 100}%)"),
        fill = "Annual Precipitation (mm)") +
   theme_bw()
 ```
@@ -169,7 +179,7 @@ ggplot(scaled_loadings) +
 
 # Compare Loadings
 
-Table of PCA loadings and PLS axis loadings.
+Table of loadings from the first PCA and PLS axes.
 
 ```{r}
 pls.loadings <- get_loadings(tom.pls) %>% select(Variable, PLS = p1)
